// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ECPresentationManager addon results conversion to ECPresentation objects returns child nodes 1`] = `
Array [
  Object {
    "key": Object {
      "instanceKey": Object {
        "className": "turquoise",
        "id": "0x350d0000005955",
      },
      "pathFromRoot": Array [
        "p1",
      ],
      "type": "ECInstanceNode",
    },
    "label": "test2",
  },
  Object {
    "key": Object {
      "pathFromRoot": Array [
        "p1",
        "p3",
      ],
      "type": "type 2",
    },
    "label": "test3",
  },
]
`;

exports[`ECPresentationManager addon results conversion to ECPresentation objects returns content 1`] = `
Content {
  "contentSet": Array [
    Item {
      "classInfo": Object {
        "id": "0xc43000000143f2",
        "label": "input",
        "name": "cross-platform",
      },
      "displayValues": Object {
        "Bedfordshire": "monetize",
      },
      "imageId": "54b67b0d-e045-4ff9-a03b-a818ce3470a8",
      "label": "Checking Account Checking Account",
      "mergedFieldNames": Array [],
      "primaryKeys": Array [
        Object {
          "className": "transform",
          "id": "0x1283800000109f2",
        },
      ],
      "values": Object {
        "Bedfordshire": "quantify Auto Loan Account withdrawal",
      },
    },
  ],
  "descriptor": Descriptor {
    "contentFlags": 0,
    "displayType": "et neque tempora",
    "fields": Array [
      PropertiesField {
        "category": Object {
          "description": "Libero est ullam ea.",
          "expand": false,
          "label": "Gibraltar Pound Practical Plastic Table",
          "name": "Bedfordshire",
          "priority": 73717,
        },
        "isReadonly": true,
        "label": "circuit didactic world-class",
        "name": "Bedfordshire",
        "priority": 83206,
        "properties": Array [
          Object {
            "property": Object {
              "classInfo": Object {
                "id": "0x135fe0000000de6",
                "label": "web services workforce",
                "name": "cutting-edge",
              },
              "name": "back-end",
              "type": "string",
            },
            "relatedClassPath": Array [],
          },
        ],
        "type": Object {
          "typeName": "string",
          "valueFormat": "Primitive",
        },
      },
    ],
    "selectClasses": Array [
      Object {
        "isSelectPolymorphic": true,
        "pathToPrimaryClass": Array [],
        "relatedPropertyPaths": Array [],
        "selectClassInfo": Object {
          "id": "0x1267300000112a0",
          "label": "Dynamic",
          "name": "Intranet",
        },
      },
    ],
  },
}
`;

exports[`ECPresentationManager addon results conversion to ECPresentation objects returns content descriptor 1`] = `
Descriptor {
  "connectionId": "e2c09f34-d82e-4329-8080-456e4e17ea03",
  "contentFlags": 0,
  "contentOptions": "bar",
  "displayType": "orchestrate",
  "fields": Array [
    PropertiesField {
      "category": Object {
        "description": "Odio a dolorem quibusdam alias repudiandae quo.",
        "expand": true,
        "label": "withdrawal",
        "name": "Ohio",
        "priority": 61251,
      },
      "editor": Object {
        "name": "transmitting",
        "params": Object {
          "some_param": 34574,
        },
      },
      "isReadonly": false,
      "label": "efficient",
      "name": "Primitive property field with editor",
      "priority": 6480,
      "properties": Array [
        Object {
          "property": Object {
            "classInfo": Object {
              "id": "0x5d0700000020dd",
              "label": "Slovenia open-source Consultant",
              "name": "Cheese",
            },
            "enumerationInfo": Object {
              "choices": Array [
                Object {
                  "label": "Frozen XSS",
                  "value": "c7170cee-ef8a-4fb4-b728-bb37d1bf458b",
                },
                Object {
                  "label": "redundant Wallis and Futuna SSL",
                  "value": "17c48398-56ad-4be5-b3cf-86f92475c6b0",
                },
              ],
              "isStrict": false,
            },
            "name": "Diverse",
            "type": "string",
          },
          "relatedClassPath": Array [],
        },
      ],
      "type": Object {
        "typeName": "string",
        "valueFormat": "Primitive",
      },
    },
    PropertiesField {
      "category": Object {
        "description": "Ea voluptas aut qui alias non.",
        "expand": false,
        "label": "repurpose Customer Ethiopia",
        "name": "SCSI",
        "priority": 65472,
      },
      "isReadonly": false,
      "label": "orchid",
      "name": "Complex array of structs property field",
      "priority": 1165,
      "properties": Array [
        Object {
          "property": Object {
            "classInfo": Object {
              "id": "0x1f2300000064bf",
              "label": "Dynamic Tunisian Dinar",
              "name": "methodical",
            },
            "kindOfQuantity": Object {
              "currentFusId": "ba46d444-1f16-4db7-b17b-4b6e06d99b6e",
              "label": "cross-platform Alabama Inverse",
              "name": "mobile",
              "persistenceUnit": "system",
            },
            "name": "redundant",
            "type": "double",
          },
          "relatedClassPath": Array [],
        },
      ],
      "type": Object {
        "memberType": Object {
          "members": Array [
            Object {
              "label": "bypass",
              "name": "migration",
              "type": Object {
                "typeName": "string",
                "valueFormat": "Primitive",
              },
            },
            Object {
              "label": "heuristic",
              "name": "demand-driven",
              "type": Object {
                "memberType": Object {
                  "typeName": "string",
                  "valueFormat": "Primitive",
                },
                "typeName": "string[]",
                "valueFormat": "Array",
              },
            },
          ],
          "typeName": "SomeClass",
          "valueFormat": "Struct",
        },
        "typeName": "string[]",
        "valueFormat": "Array",
      },
    },
    NestedContentField {
      "category": Object {
        "description": "Dignissimos voluptas repellat et nihil perferendis.",
        "expand": false,
        "label": "Dynamic Gloves",
        "name": "ADP",
        "priority": 59704,
      },
      "contentClassInfo": Object {
        "id": "0xf0560000014c3b",
        "label": "Adaptive Cotton indexing",
        "name": "intranet",
      },
      "isReadonly": true,
      "label": "vertical Savings Account",
      "name": "Nested content field",
      "nestedFields": Array [
        Field {
          "category": Object {
            "description": "Beatae quos dolor repellendus.",
            "expand": true,
            "label": "Handmade Directives",
            "name": "cross-media",
            "priority": 55394,
          },
          "isReadonly": true,
          "label": "open system",
          "name": "Simple property field",
          "priority": 76141,
          "type": Object {
            "typeName": "string",
            "valueFormat": "Primitive",
          },
        },
      ],
      "pathToPrimaryClass": Array [
        Object {
          "isForwardRelationship": true,
          "isPolymorphicRelationship": false,
          "relationshipInfo": Object {
            "id": "0x6779000000e2f7",
            "label": "Falls",
            "name": "Fresh",
          },
          "sourceClassInfo": Object {
            "id": "0xd17000000083c5",
            "label": "Virginia eco-centric",
            "name": "Handmade",
          },
          "targetClassInfo": Object {
            "id": "0x42980000013f78",
            "label": "SCSI Texas white",
            "name": "synthesizing",
          },
        },
      ],
      "priority": 67388,
      "type": Object {
        "members": Array [
          Object {
            "label": "Plastic Chief",
            "name": "extensible",
            "type": Object {
              "typeName": "string",
              "valueFormat": "Primitive",
            },
          },
        ],
        "typeName": "XML",
        "valueFormat": "Struct",
      },
    },
  ],
  "inputKeysHash": "0ba6d478-7921-4998-9666-e7bf11d320f5",
  "selectClasses": Array [
    Object {
      "isSelectPolymorphic": true,
      "pathToPrimaryClass": Array [
        Object {
          "isForwardRelationship": false,
          "isPolymorphicRelationship": false,
          "relationshipInfo": Object {
            "id": "0xf0c50000002e40",
            "label": "website port Intelligent Plastic Chicken",
            "name": "help-desk",
          },
          "sourceClassInfo": Object {
            "id": "0x8dd4000000eea4",
            "label": "New York",
            "name": "Marketing",
          },
          "targetClassInfo": Object {
            "id": "0x7a830000002b0b",
            "label": "Avon New Leu",
            "name": "Program",
          },
        },
      ],
      "relatedPropertyPaths": Array [
        Array [
          Object {
            "isForwardRelationship": false,
            "isPolymorphicRelationship": true,
            "relationshipInfo": Object {
              "id": "0x5453000000d715",
              "label": "Specialist Granite",
              "name": "SDD",
            },
            "sourceClassInfo": Object {
              "id": "0xd390000000dd80",
              "label": "heuristic",
              "name": "artificial intelligence",
            },
            "targetClassInfo": Object {
              "id": "0x104810000008663",
              "label": "interfaces",
              "name": "index",
            },
          },
        ],
      ],
      "selectClassInfo": Object {
        "id": "0x41e00000005d5b",
        "label": "Gloves",
        "name": "District",
      },
    },
  ],
}
`;

exports[`ECPresentationManager addon results conversion to ECPresentation objects returns filtered node paths 1`] = `
Object {
  "children": Array [],
  "index": 634,
  "isMarked": true,
  "node": Object {
    "hasChildren": false,
    "isCheckboxEnabled": false,
    "isCheckboxVisible": false,
    "isChecked": false,
    "isEditable": false,
    "isExpanded": true,
    "isSelectable": false,
    "key": Object {
      "instanceKey": Object {
        "className": "throughput",
        "id": "0x17ae30000017e71",
      },
      "pathFromRoot": Array [
        "0ac963ce-ddc4-488c-864d-6bb70fbea7cb",
        "ca893c40-6773-462d-af5a-0c6206c3a8d4",
      ],
      "type": "ECInstanceNode",
    },
    "label": "Kyat West Virginia",
  },
}
`;

exports[`ECPresentationManager addon results conversion to ECPresentation objects returns node paths 1`] = `
Object {
  "children": Array [],
  "index": 481,
  "isMarked": false,
  "node": Object {
    "backColor": "rgb(
    56,
    207,
    36
  )",
    "description": "Nesciunt dolor enim ipsum officiis voluptates eaque a.",
    "foreColor": "#21F749",
    "hasChildren": true,
    "isCheckboxEnabled": false,
    "isCheckboxVisible": false,
    "isChecked": false,
    "isEditable": false,
    "isExpanded": true,
    "isSelectable": false,
    "key": Object {
      "instanceKey": Object {
        "className": "Honduras",
        "id": "0x29e9000000e470",
      },
      "pathFromRoot": Array [
        "ef79d4c7-b408-45d1-897a-94a388c42752",
        "ef51cc8e-90ad-4460-aa8f-7aa6d39cf5a1",
      ],
      "type": "ECInstanceNode",
    },
    "label": "transition",
  },
}
`;

exports[`ECPresentationManager addon results conversion to ECPresentation objects returns root nodes 1`] = `
Array [
  Object {
    "backColor": "backColor1",
    "description": "description1",
    "fontStyle": "fontStyle1",
    "foreColor": "foreColor1",
    "hasChildren": true,
    "imageId": "img_1",
    "isCheckboxEnabled": true,
    "isCheckboxVisible": true,
    "isChecked": true,
    "isEditable": true,
    "isExpanded": true,
    "isSelectable": true,
    "key": Object {
      "pathFromRoot": Array [
        "p1",
        "p2",
        "p3",
      ],
      "type": "type1",
    },
    "label": "test1",
  },
  Object {
    "backColor": "",
    "description": "description2",
    "fontStyle": "",
    "foreColor": "",
    "hasChildren": false,
    "imageId": "",
    "isCheckboxEnabled": false,
    "isCheckboxVisible": false,
    "isChecked": false,
    "isEditable": false,
    "isExpanded": false,
    "isSelectable": false,
    "key": Object {
      "instanceKey": Object {
        "className": "Legacy",
        "id": "0xde620000016aad",
      },
      "pathFromRoot": Array [
        "p1",
      ],
      "type": "ECInstanceNode",
    },
    "label": "test2",
  },
  Object {
    "key": Object {
      "pathFromRoot": Array [
        "p1",
        "p3",
      ],
      "type": "some node",
    },
    "label": "test2",
  },
]
`;
